Version 2.7.13 (?):

* Enhanced the inference engine so that whenever the subproperty rule is on, statements
  of the form "?x a ?y" where ?y is one of the standard property classes will result in
  "?x rdfs:subPropertyOf ?x".  (The property classes are owl:AnnotationProperty,
  owl:AsymmetricProperty, owl:DatatypeProp, owl:DeprecatedProperty, owl:FuncProp,
  owl:InvFuncProp, owl:IrreflexiveProperty, owl:ObjectProp, owl:ReflexiveProperty,
  owl:SymmetricProp, owl:TransitiveProp, and rdf:Property.)

* Added a directory prefix and fixed execute permissions in the distribution zip files

* Fixed the build of the Boost libraries so that the ICU library is no longer required

* Updated a number of dependency versions



=================================================

Version 2.7.12 (4/16/2019):

----------------------   Important -- Please Read !!!   -----------------------
---                                                                         ---
---  The file format of version 2.7.12 is not backwards compatible with     ---
---  older versions.  To upgrade the data stored in a prior release of      ---
---  Parliament, please follow the procedure in Section 2.1.2, "Upgrading   ---
---  an Existing Installation", in the Parliament User Guide.  This can be  ---
---  found in your Parliament download, and it is also available here:      ---
---                                                                         ---
---  https://github.com/SemWebCentral/parliament/tree/master/doc/UserGuide  ---
---                                                                         ---
-------------------------------------------------------------------------------

* Moved Parliament from Subversion-based SemWebCentral to GitHub

* Merged into the trunk the SWRL rules engine created by Carl Andersen and Doug Reid

* Added the script 'InstallService.sh' for Linux builds.  On systemd-based Linux